--- a/teks.html
+++ b/teks.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Jasa Pasang WiFi - Mulai dari Rp 100.000/Bulan</title>
+    <title>📶Pusat WiFi Solo</title>
     <style>
         * {
             margin: 0;
