--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Jasa Pasang WiFi - Mulai dari Rp 100.000/Bulan</title>
+    <title>📶Jasa Pasang WiFi</title>
     <style>
         * {
             margin: 0;
@@ -206,8 +206,8 @@
 <body>
     <header>
         <h1>Jasa Pasang WiFi</h1>
-        <p>Internet Cepat dan Stabil Mulai dari Rp 100.000/Bulan</p>
-        <p class="slogan">Internet cepat, murah, dan gratis biaya perbaikan</p>
+        <p>Internet Cepat dan Stabil<br>Mulai dari Rp 100.000/Bulan</p>
+        <p class="slogan">Internet Cepat, Murah, dan Gratis Biaya Perbaikan</p>
     </header>
     <div class="container">
         <section class="pricing" id="pricing">
