--- a/index.html
+++ b/index.html
@@ -227,14 +227,14 @@
             </div>
             <div class="card" data-package="Premium">
                 <h3>Paket Premium</h3>
-                <p>Kecepatan: 20 Mbps</p>
+                <p>Kecepatan: 25 Mbps</p>
                 <p>Harga: Rp 150.000/Bulan</p>
                 <p>Untuk streaming HD dan gaming</p>
                 <a href="#" class="btn" onclick="redirectToWhatsApp('Premium')">Pilih Paket</a>
             </div>
             <div class="card" data-package="Platinum">
                 <h3>Paket Platinum</h3>
-                <p>Kecepatan: 40 Mbps</p>
+                <p>Kecepatan: 50 Mbps</p>
                 <p>Harga: Rp 200.000/Bulan</p>
                 <p>Untuk penggunaan berat</p>
                 <a href="#" class="btn" onclick="redirectToWhatsApp('Platinum')">Pilih Paket</a>
@@ -287,7 +287,7 @@
         });
 
         // Dynamic year in footer
-        document.querySelector('footer p').textContent = `${new Date().getFullYear()} Pusat WiFi Solo. Semua hak dilindungi.`;
+        document.querySelector('footer p').textContent = `${new Date().getFullYear()} Pusat WiFi Solo. Semua hak dilindungi`;
 
         // Add rotateIn animation to cards on click
         cards.forEach(card => {
