--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
                 <h3>Paket Platinum</h3>
                 <p>Kecepatan: 50 Mbps</p>
                 <p>Harga: Rp 200.000/Bulan</p>
-                <p>Untuk penggunaan berat</p>
+                <p>Untuk kebutuhan intensif & tanpa hambatan</p>
                 <a href="#" class="btn" onclick="redirectToWhatsApp('Platinum')">Pilih Paket</a>
             </div>
         </section>
