--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
     <script>
         // Redirect to WhatsApp with selected package
         function redirectToWhatsApp(packageName) {
-            const message = encodeURIComponent(`Saya ingin mendaftar untuk paket ${packageName}`);
+            const message = encodeURIComponent(`Saya ingin mendaftar untuk Paket ${packageName}`);
             const whatsappUrl = `https://wa.me/6285777773541?text=${message}`;
             window.open(whatsappUrl, '_blank');
         }
