--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             overflow-x: hidden;
             width: 100%;
             min-height: 100vh;
-            position: relative; /* Added for floating button positioning */
+            position: relative;
         }
         header {
             background: linear-gradient(135deg, #1e3a8a, #3b82f6);
@@ -223,6 +223,11 @@
         .contact-info a:hover {
             color: #1e3a8a;
         }
+        .contact-info .whatsapp-icon {
+            width: 24px;
+            height: 24px;
+            vertical-align: middle;
+        }
         .popup {
             position: fixed;
             top: 0;
@@ -397,6 +402,10 @@
                 line-height: 1.3;
                 padding-left: 2em;
             }
+            .contact-info .whatsapp-icon { 
+                width: 20px; 
+                height: 20px; 
+            }
             .popup-content { width: 90%; padding: 2em; }
             .popup-content h2 { font-size: 1.5em; }
             .popup-btn { padding: 10px 25px; font-size: 0.9em; }
@@ -439,6 +448,10 @@
                 grid-template-columns: 1fr auto 2fr; 
                 line-height: 1.2;
                 padding-left: 1.5em;
+            }
+            .contact-info .whatsapp-icon { 
+                width: 18px; 
+                height: 18px; 
             }
             .popup-content { padding: 1.5em; }
             .popup-content h2 { font-size: 1.3em; }
@@ -527,7 +540,7 @@
             <div class="contact-info">
                 <p class="label">WhatsApp</p>
                 <p class="colon">:</p>
-                <p><a href="#" onclick="redirectToContactWhatsApp()">0857-7777-3541</a></p>
+                <p><a href="#" onclick="redirectToContactWhatsApp()"><img src="./whatsapp.png" alt="WhatsApp" class="whatsapp-icon"></a></p>
                 <p class="label">Email</p>
                 <p class="colon">:</p>
                 <p><a href="mailto:halopusatwifisolo@gmail.com?subject=Informasi%20Pasang%20WiFi%20Solo">halopusatwifisolo@gmail.com</a></p>
@@ -535,7 +548,7 @@
         </section>
     </div>
     <div class="whatsapp-float" onclick="redirectToContactWhatsApp()">
-        <img src="whatsapp.png" alt="WhatsApp">
+        <img src="./whatsapp.png" alt="WhatsApp">
     </div>
     <footer>
         <p>2025 Pusat WiFi Solo\nInternet Lancar dan Stabil</p>
@@ -582,7 +595,7 @@
                            ("0" + (today.getMonth() + 1)).slice(-2) +
                            ("0" + today.getDate()).slice(-2);
             const promoNumber = (parseInt(dateStr) + 22222222).toString().padStart(8, '0');
-            const promoCode = `#REFF${promoNumber}`;
+            const promoCode = `*#REFF${promoNumber}*`;
 
             const message = packageName === 'Promo' 
                 ? encodeURIComponent(`Saya ingin mendaftar untuk Promo Gratis 1 Bulan\n\n${promoCode}`)
@@ -594,7 +607,13 @@
 
         // Redirect to WhatsApp for contact section and floating button
         function redirectToContactWhatsApp() {
-            const message = encodeURIComponent(`Saya ingin informasi lebih lanjut tentang Pasang WiFi di Pusat WiFi Solo`);
+            const today = new Date();
+            const dateStr = today.getFullYear().toString().slice(-2) +
+                           ("0" + (today.getMonth() + 1)).slice(-2) +
+                           ("0" + today.getDate()).slice(-2);
+            const promoNumber = (parseInt(dateStr) + 22222222).toString().padStart(8, '0');
+            const promoCode = `*#REFF${promoNumber}*`;
+            const message = encodeURIComponent(`Saya ingin informasi lebih lanjut tentang Pasang WiFi di Pusat WiFi Solo\n\n${promoCode}`);
             const whatsappUrl = `https://wa.me/6285777773541?text=${message}`;
             window.open(whatsappUrl, '_blank');
         }
