--- a/index.html
+++ b/index.html
@@ -223,11 +223,6 @@
         .contact-info a:hover {
             color: #1e3a8a;
         }
-        .contact-info .whatsapp-icon {
-            width: 24px;
-            height: 24px;
-            vertical-align: middle;
-        }
         .popup {
             position: fixed;
             top: 0;
@@ -307,15 +302,16 @@
             background-color: #25D366;
             border-radius: 50%;
             box-shadow: 0 4px 10px rgba(0,0,0,0.3);
-            display: flex;
+            display: none;
             justify-content: center;
             align-items: center;
             transition: transform 0.3s, box-shadow 0.3s;
             cursor: pointer;
+            font-size: 30px;
+            color: white;
         }
-        .whatsapp-float img {
-            width: 40px;
-            height: 40px;
+        .whatsapp-float.show {
+            display: flex;
         }
         .whatsapp-float:hover {
             transform: scale(1.1);
@@ -402,20 +398,13 @@
                 line-height: 1.3;
                 padding-left: 2em;
             }
-            .contact-info .whatsapp-icon { 
-                width: 20px; 
-                height: 20px; 
-            }
             .popup-content { width: 90%; padding: 2em; }
             .popup-content h2 { font-size: 1.5em; }
             .popup-btn { padding: 10px 25px; font-size: 0.9em; }
             .whatsapp-float {
                 width: 50px;
                 height: 50px;
-            }
-            .whatsapp-float img {
-                width: 35px;
-                height: 35px;
+                font-size: 25px;
             }
             footer { padding: 0.25em; }
             footer p { font-size: 0.7em; }
@@ -449,20 +438,13 @@
                 line-height: 1.2;
                 padding-left: 1.5em;
             }
-            .contact-info .whatsapp-icon { 
-                width: 18px; 
-                height: 18px; 
-            }
             .popup-content { padding: 1.5em; }
             .popup-content h2 { font-size: 1.3em; }
             .popup-btn { padding: 8px 20px; font-size: 0.8em; }
             .whatsapp-float {
                 width: 45px;
                 height: 45px;
-            }
-            .whatsapp-float img {
-                width: 30px;
-                height: 30px;
+                font-size: 22px;
             }
             footer { padding: 0.2em; }
             footer p { font-size: 0.65em; }
@@ -540,16 +522,14 @@
             <div class="contact-info">
                 <p class="label">WhatsApp</p>
                 <p class="colon">:</p>
-                <p><a href="#" onclick="redirectToContactWhatsApp()"><img src="./whatsapp.png" alt="WhatsApp" class="whatsapp-icon"></a></p>
+                <p><a href="#" onclick="redirectToContactWhatsApp()">0857-7777-3541</a></p>
                 <p class="label">Email</p>
                 <p class="colon">:</p>
                 <p><a href="mailto:halopusatwifisolo@gmail.com?subject=Informasi%20Pasang%20WiFi%20Solo">halopusatwifisolo@gmail.com</a></p>
             </div>
         </section>
     </div>
-    <div class="whatsapp-float" onclick="redirectToContactWhatsApp()">
-        <img src="./whatsapp.png" alt="WhatsApp">
-    </div>
+    <div class="whatsapp-float" onclick="redirectToContactWhatsApp()">📞</div>
     <footer>
         <p>2025 Pusat WiFi Solo\nInternet Lancar dan Stabil</p>
     </footer>
@@ -568,9 +548,12 @@
             triggerHeaderAnimations();
         };
 
-        // Close popup and replay header animations
+        // Close popup, show floating button after 1.5 seconds, and replay header animations
         function closePopup() {
             document.getElementById('welcomePopup').classList.remove('show');
+            setTimeout(() => {
+                document.querySelector('.whatsapp-float').classList.add('show');
+            }, 1500); // 1.5 seconds delay
             // Reset header animations
             document.querySelector('.part1').classList.remove('animated');
             document.querySelector('.part2').classList.remove('animated');
