--- a/index.html
+++ b/index.html
@@ -294,12 +294,12 @@
         }
         .whatsapp-float {
             position: fixed;
-            bottom: 20px;
-            left: 20px;
+            bottom: 15px;
+            left: 15px;
             z-index: 1000;
-            width: 60px;
-            height: 60px;
-            background-color: #25D366;
+            width: 50px;
+            height: 50px;
+            background-color: #066699;
             border-radius: 50%;
             box-shadow: 0 4px 10px rgba(0,0,0,0.3);
             display: none;
