--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
             z-index: 1000;
             width: 50px;
             height: 50px;
-            background-color: #066699;
+            background-color: #0797E3;
             border-radius: 50%;
             box-shadow: 0 4px 10px rgba(0,0,0,0.3);
             display: none;
