--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             background: linear-gradient(135deg, #1e3a8a, #3b82f6);
             color: white;
             text-align: center;
-            padding: 2em 1em;
+            padding: 1.19em 1em;
             position: relative;
             overflow: hidden;
             box-shadow: 0 4px 20px rgba(0,0,0,0.2);
@@ -53,13 +53,13 @@
             animation: slideInLeft 1s ease-out forwards;
         }
         header .part2.animated {
-            animation: slideInLeft 1s ease-out 0.5s forwards;
+            animation: slideInLeft 1s ease-out 1.3s forwards;
         }
         header p.animated {
-            animation: slideInRight 1s ease-out 0.4s forwards;
+            animation: slideInRight 1s ease-out 2.3s forwards;
         }
         header .slogan.animated {
-            animation: slideInRight 1s ease-out 0.6s forwards;
+            animation: slideInRight 1s ease-out 2.3s forwards;
         }
         header p {
             font-size: 1.4em;
@@ -130,6 +130,17 @@
             max-width: 350px;
             margin: 0 auto;
             border: 3px solid #60a5fa;
+        }
+        .card.best::after {
+            content: '\f521'; /* Font Awesome crown icon */
+            font-family: 'Font Awesome 6 Free';
+            font-weight: 900;
+            position: absolute;
+            top: 10px;
+            right: 10px;
+            color: #f59e0b;
+            font-size: 1.5em;
+            padding: 6px;
         }
         .card::before {
             content: '';
@@ -205,7 +216,12 @@
             padding-left: 2.5em;
         }
         .contact-info p {
-            margin: 0.3em 0;
+            margin: 0.15em 0; /* Reduced from 0.3em to make lines closer */
+        }
+        .contact-info .label:nth-child(1),
+        .contact-info .colon:nth-child(2),
+        .contact-info p:nth-child(3) {
+            margin-top: 0.5em; /* Shift WhatsApp row downward */
         }
         .contact-info .label {
             font-weight: 600;
@@ -294,28 +310,29 @@
         }
         .whatsapp-float {
             position: fixed;
-            bottom: 15px;
-            left: 15px;
+            bottom: 27px;
+            left: 13px;
             z-index: 1000;
-            width: 50px;
-            height: 50px;
-            background-color: #0797E3;
+            width: 60px;
+            height: 60px;
+            background: linear-gradient(45deg, #25D366, #128C7E);
             border-radius: 50%;
-            box-shadow: 0 4px 10px rgba(0,0,0,0.3);
+            box-shadow: 0 6px 20px rgba(0,0,0,0.3);
             display: none;
             justify-content: center;
             align-items: center;
             transition: transform 0.3s, box-shadow 0.3s;
             cursor: pointer;
-            font-size: 30px;
+            font-size: 32px;
             color: white;
         }
         .whatsapp-float.show {
             display: flex;
+            animation: fadeInUp 0.6s ease-out forwards;
         }
         .whatsapp-float:hover {
-            transform: scale(1.1);
-            box-shadow: 0 6px 15px rgba(0,0,0,0.4);
+            transform: scale(1.15);
+            box-shadow: 0 8px 25px rgba(0,0,0,0.4);
         }
         footer {
             background: linear-gradient(45deg, #1e3a8a, #3b82f6);
@@ -358,7 +375,7 @@
             100% { opacity: 0.4; }
         }
         @media (max-width: 768px) {
-            header { padding: 1.5em 1em; }
+            header { padding: 0.8925em 1em; }
             header h1 { font-size: 2em; }
             header p { font-size: 1.2em; }
             header .slogan { font-size: 1em; }
@@ -398,19 +415,29 @@
                 line-height: 1.3;
                 padding-left: 2em;
             }
+            .contact-info p {
+                margin: 0.15em 0;
+            }
+            .contact-info .label:nth-child(1),
+            .contact-info .colon:nth-child(2),
+            .contact-info p:nth-child(3) {
+                margin-top: 0.4em; /* Adjusted for smaller screen */
+            }
             .popup-content { width: 90%; padding: 2em; }
             .popup-content h2 { font-size: 1.5em; }
             .popup-btn { padding: 10px 25px; font-size: 0.9em; }
             .whatsapp-float {
                 width: 50px;
                 height: 50px;
-                font-size: 25px;
+                font-size: 28px;
+                bottom: 27px;
+                left: 13px;
             }
             footer { padding: 0.25em; }
             footer p { font-size: 0.7em; }
         }
         @media (max-width: 480px) {
-            header { padding: 1em 0.5em; }
+            header { padding: 0.595em 0.5em; }
             header h1 { font-size: 1.6em; }
             header p { font-size: 1em; }
             header .slogan { font-size: 0.9em; }
@@ -438,13 +465,23 @@
                 line-height: 1.2;
                 padding-left: 1.5em;
             }
+            .contact-info p {
+                margin: 0.15em 0;
+            }
+            .contact-info .label:nth-child(1),
+            .contact-info .colon:nth-child(2),
+            .contact-info p:nth-child(3) {
+                margin-top: 0.3em; /* Adjusted for smaller screen */
+            }
             .popup-content { padding: 1.5em; }
             .popup-content h2 { font-size: 1.3em; }
             .popup-btn { padding: 8px 20px; font-size: 0.8em; }
             .whatsapp-float {
                 width: 45px;
                 height: 45px;
-                font-size: 22px;
+                font-size: 24px;
+                bottom: 27px;
+                left: 13px;
             }
             footer { padding: 0.2em; }
             footer p { font-size: 0.65em; }
@@ -501,7 +538,7 @@
                 <p>Cocok untuk keluarga<br>dan gaming</p>
                 <a href="#" class="btn" onclick="redirectToWhatsApp('Standard')">Pilih Paket</a>
             </div>
-            <div class="card" data-package="Premium">
+            <div class="card best" data-package="Premium">
                 <h3>Paket<br>Premium</h3>
                 <p>Kecepatan: 25 Mbps</p>
                 <p>Harga: Rp 150.000/Bulan</p>
@@ -529,7 +566,9 @@
             </div>
         </section>
     </div>
-    <div class="whatsapp-float" onclick="redirectToContactWhatsApp()">📞</div>
+    <div class="whatsapp-float" onclick="redirectToContactWhatsApp()">
+        <i class="fab fa-whatsapp"></i>
+    </div>
     <footer>
         <p>2025 Pusat WiFi Solo\nInternet Lancar dan Stabil</p>
     </footer>
@@ -573,16 +612,9 @@
                 Promo: { speed: "N/A", price: "Promo Gratis 1 Bulan" }
             };
 
-            const today = new Date();
-            const dateStr = today.getFullYear().toString().slice(-2) +
-                           ("0" + (today.getMonth() + 1)).slice(-2) +
-                           ("0" + today.getDate()).slice(-2);
-            const promoNumber = (parseInt(dateStr) + 22222222).toString().padStart(8, '0');
-            const promoCode = `*#REFF${promoNumber}*`;
-
             const message = packageName === 'Promo' 
-                ? encodeURIComponent(`Saya ingin mendaftar untuk Promo Gratis 1 Bulan\n\n${promoCode}`)
-                : encodeURIComponent(`Saya ingin mendaftar untuk Paket ${packageName}\nKecepatan: ${packages[packageName].speed}\nHarga: ${packages[packageName].price}\n\n${promoCode}`);
+                ? encodeURIComponent(`Saya ingin mendaftar untuk Promo Gratis 1 Bulan`)
+                : encodeURIComponent(`Saya ingin mendaftar untuk Paket ${packageName}\nKecepatan: ${packages[packageName].speed}\nHarga: ${packages[packageName].price}`);
 
             const whatsappUrl = `https://wa.me/6285777773541?text=${message}`;
             window.open(whatsappUrl, '_blank');
@@ -590,13 +622,7 @@
 
         // Redirect to WhatsApp for contact section and floating button
         function redirectToContactWhatsApp() {
-            const today = new Date();
-            const dateStr = today.getFullYear().toString().slice(-2) +
-                           ("0" + (today.getMonth() + 1)).slice(-2) +
-                           ("0" + today.getDate()).slice(-2);
-            const promoNumber = (parseInt(dateStr) + 22222222).toString().padStart(8, '0');
-            const promoCode = `*#REFF${promoNumber}*`;
-            const message = encodeURIComponent(`Saya ingin informasi lebih lanjut tentang Pasang WiFi di Pusat WiFi Solo\n\n${promoCode}`);
+            const message = encodeURIComponent(`Saya ingin informasi lebih lanjut tentang Pasang WiFi di Pusat WiFi Solo`);
             const whatsappUrl = `https://wa.me/6285777773541?text=${message}`;
             window.open(whatsappUrl, '_blank');
         }
