--- a/index.html
+++ b/index.html
@@ -114,11 +114,11 @@
         .pricing {
             display: grid;
             grid-template-columns: repeat(4, minmax(250px, 1fr));
-            gap: 1.5em;
+            gap: 0.8em;
             padding: 2em 0;
         }
         .card {
-            background: #f8fafc;
+            background: linear-gradient(135deg, #e6f0ff, #f5faff);
             border-radius: 20px;
             box-shadow: 0 8px 30px rgba(0,0,0,0.2);
             padding: 2em;
@@ -129,18 +129,21 @@
             width: 100%;
             max-width: 350px;
             margin: 0 auto;
-            border: 3px solid #60a5fa;
+            border: 1px solid #60a5fa;
         }
         .card.best::after {
-            content: '\f521'; /* Font Awesome crown icon */
+            content: '\f521';
             font-family: 'Font Awesome 6 Free';
             font-weight: 900;
             position: absolute;
-            top: 10px;
+            top: 0px;
             right: 10px;
             color: #f59e0b;
             font-size: 1.5em;
             padding: 6px;
+            transform: rotate(30deg);
+            filter: drop-shadow(0 2px 4px rgba(0,0,0,0.3));
+            animation: crownGlow 1.5s infinite ease-in-out;
         }
         .card::before {
             content: '';
@@ -158,7 +161,7 @@
         .card:hover {
             transform: translateY(-15px) rotate(1deg);
             box-shadow: 0 15px 50px rgba(0,0,0,0.35);
-            background: linear-gradient(135deg, #ffffff, #e5e7eb);
+            background: linear-gradient(135deg, #f0f7ff, #ffffff);
         }
         .card h3 {
             color: #1e3a8a;
@@ -204,24 +207,30 @@
             animation: fadeInUp 1s ease-out;
             border: 3px solid #3b82f6;
         }
+        #contact > p {
+            margin-bottom: 1.5em;
+        }
         .contact-info {
             display: grid;
             grid-template-columns: 1fr auto 3fr;
-            gap: 0.3em;
+            gap: 0.1em;
             text-align: left;
             max-width: 600px;
             margin: 0 auto;
             font-size: 1.1em;
-            line-height: 1.4;
-            padding-left: 2.5em;
+            line-height: 1.2;
+            padding-left: 1.5em;
         }
         .contact-info p {
-            margin: 0.15em 0; /* Reduced from 0.3em to make lines closer */
+            margin: 0.05em 0;
         }
         .contact-info .label:nth-child(1),
         .contact-info .colon:nth-child(2),
         .contact-info p:nth-child(3) {
-            margin-top: 0.5em; /* Shift WhatsApp row downward */
+            margin-top: 0.2em;
+        }
+        .contact-info p:nth-child(3) {
+            margin-bottom: 0.5em;
         }
         .contact-info .label {
             font-weight: 600;
@@ -282,7 +291,7 @@
             position: absolute;
             top: 15px;
             right: 15px;
-            font-size: 1.8em;
+            font-size: 2.07em;
             cursor: pointer;
             color: #1e3a8a;
             transition: color 0.3s, transform 0.3s;
@@ -310,11 +319,11 @@
         }
         .whatsapp-float {
             position: fixed;
-            bottom: 27px;
-            left: 13px;
+            bottom: 10px;
+            left: 10px;
             z-index: 1000;
-            width: 60px;
-            height: 60px;
+            width: 61px;
+            height: 61px;
             background: linear-gradient(45deg, #25D366, #128C7E);
             border-radius: 50%;
             box-shadow: 0 6px 20px rgba(0,0,0,0.3);
@@ -323,8 +332,11 @@
             align-items: center;
             transition: transform 0.3s, box-shadow 0.3s;
             cursor: pointer;
-            font-size: 32px;
-            color: white;
+        }
+        .whatsapp-float img {
+            width: 40px;
+            height: 40px;
+            object-fit: contain;
         }
         .whatsapp-float.show {
             display: flex;
@@ -333,6 +345,23 @@
         .whatsapp-float:hover {
             transform: scale(1.15);
             box-shadow: 0 8px 25px rgba(0,0,0,0.4);
+        }
+        .payment-btn {
+            display: inline-block;
+            padding: 12px 30px;
+            background: linear-gradient(45deg, #1e3a8a, #3b82f6);
+            color: white;
+            text-decoration: none;
+            border-radius: 50px;
+            font-weight: bold;
+            transition: transform 0.3s, box-shadow 0.3s, background 0.3s;
+            box-shadow: 0 4px 10px rgba(0,0,0,0.2);
+            margin-top: 1.5em;
+        }
+        .payment-btn:hover {
+            transform: scale(1.15);
+            box-shadow: 0 6px 20px rgba(0,0,0,0.3);
+            background: linear-gradient(45deg, #3b82f6, #1e3a8a);
         }
         footer {
             background: linear-gradient(45deg, #1e3a8a, #3b82f6);
@@ -374,6 +403,11 @@
             50% { opacity: 0.6; }
             100% { opacity: 0.4; }
         }
+        @keyframes crownGlow {
+            0% { filter: drop-shadow(0 2px 4px rgba(0,0,0,0.3)); opacity: 1; }
+            50% { filter: drop-shadow(0 4px 8px rgba(245,158,11,0.7)); opacity: 0.6; }
+            100% { filter: drop-shadow(0 2px 4px rgba(0,0,0,0.3)); opacity: 1; }
+        }
         @media (max-width: 768px) {
             header { padding: 0.8925em 1em; }
             header h1 { font-size: 2em; }
@@ -395,12 +429,16 @@
             .feature-card p { font-size: 0.8em; }
             .pricing { 
                 grid-template-columns: repeat(2, minmax(160px, 1fr)); 
-                gap: 1em; 
+                gap: 0.6em;
             }
             .card { 
                 padding: 1.5em; 
                 max-width: 100%; 
                 font-size: 0.9em; 
+                background: linear-gradient(135deg, #e6f0ff, #f5faff);
+            }
+            .card:hover {
+                background: linear-gradient(135deg, #f0f7ff, #ffffff);
             }
             .card h3 { font-size: 1.5em; }
             .card p { font-size: 0.9em; }
@@ -409,29 +447,46 @@
                 margin: 2em 0.5em; 
                 padding: 1.2em;
             }
+            #contact > p {
+                margin-bottom: 1.2em;
+            }
             .contact-info { 
                 font-size: 1em; 
                 grid-template-columns: 1fr auto 2fr; 
-                line-height: 1.3;
-                padding-left: 2em;
+                gap: 0.1em;
+                line-height: 1.2;
+                padding-left: 1.2em;
             }
             .contact-info p {
-                margin: 0.15em 0;
+                margin: 0.05em 0;
+            }
+            .contact-info p:nth-child(3) {
+                margin-bottom: 0.4em;
             }
             .contact-info .label:nth-child(1),
             .contact-info .colon:nth-child(2),
             .contact-info p:nth-child(3) {
-                margin-top: 0.4em; /* Adjusted for smaller screen */
+                margin-top: 0.15em;
             }
             .popup-content { width: 90%; padding: 2em; }
             .popup-content h2 { font-size: 1.5em; }
             .popup-btn { padding: 10px 25px; font-size: 0.9em; }
+            .close-btn {
+                font-size: 1.725em;
+            }
             .whatsapp-float {
-                width: 50px;
-                height: 50px;
-                font-size: 28px;
-                bottom: 27px;
-                left: 13px;
+                width: 51px;
+                height: 51px;
+                bottom: 10px;
+                left: 10px;
+            }
+            .whatsapp-float img {
+                width: 34px;
+                height: 34px;
+            }
+            .payment-btn {
+                padding: 10px 25px;
+                font-size: 0.9em;
             }
             footer { padding: 0.25em; }
             footer p { font-size: 0.7em; }
@@ -451,37 +506,63 @@
             .feature-card i { font-size: 1.8em; }
             .feature-card h3 { font-size: 0.9em; }
             .feature-card p { font-size: 0.7em; }
-            .pricing { grid-template-columns: repeat(2, minmax(140px, 1fr)); }
-            .card { padding: 1em; }
+            .pricing { grid-template-columns: repeat(2, minmax(140px, 1fr)); gap: 0.5em; }
+            .card { 
+                padding: 1em; 
+                background: linear-gradient(135deg, #e6f0ff, #f5faff);
+            }
+            .card:hover {
+                background: linear-gradient(135deg, #f0f7ff, #ffffff);
+            }
             .card h3 { font-size: 1.3em; }
             .card p { font-size: 0.8em; }
             .btn { padding: 8px 15px; font-size: 0.8em; }
+            .card.best::after {
+                top: 0px;
+            }
             #contact { 
                 padding: 1em;
+            }
+            #contact > p {
+                margin-bottom: 1em;
             }
             .contact-info { 
                 font-size: 0.9em; 
                 grid-template-columns: 1fr auto 2fr; 
+                gap: 0.1em;
                 line-height: 1.2;
-                padding-left: 1.5em;
+                padding-left: 1em;
             }
             .contact-info p {
-                margin: 0.15em 0;
+                margin: 0.05em 0;
+            }
+            .contact-info p:nth-child(3) {
+                margin-bottom: 0.3em;
             }
             .contact-info .label:nth-child(1),
             .contact-info .colon:nth-child(2),
             .contact-info p:nth-child(3) {
-                margin-top: 0.3em; /* Adjusted for smaller screen */
+                margin-top: 0.1em;
             }
             .popup-content { padding: 1.5em; }
             .popup-content h2 { font-size: 1.3em; }
             .popup-btn { padding: 8px 20px; font-size: 0.8em; }
+            .close-btn {
+                font-size: 1.495em;
+            }
             .whatsapp-float {
-                width: 45px;
-                height: 45px;
-                font-size: 24px;
-                bottom: 27px;
-                left: 13px;
+                width: 46px;
+                height: 46px;
+                bottom: 10px;
+                left: 10px;
+            }
+            .whatsapp-float img {
+                width: 30px;
+                height: 30px;
+            }
+            .payment-btn {
+                padding: 8px 20px;
+                font-size: 0.8em;
             }
             footer { padding: 0.2em; }
             footer p { font-size: 0.65em; }
@@ -509,7 +590,7 @@
         <section class="features">
             <div class="feature-card">
                 <i class="fas fa-rocket"></i>
-                <h3>Kecepatan Tinggi</h3>
+                <h3>Kecepatan Maksimal</h3>
                 <p>Nikmati internet super cepat untuk semua kebutuhan Anda.</p>
             </div>
             <div class="feature-card">
@@ -528,13 +609,15 @@
                 <h3>Paket<br>Basic</h3>
                 <p>Kecepatan: 10 Mbps</p>
                 <p>Harga: Rp 100.000/Bulan</p>
-                <p>Ideal untuk browsing<br>dan streaming ringan</p>
+                <p>&nbsp;</p>
+                <p>Ideal untuk browsing<br>dan YouTube</p>
                 <a href="#" class="btn" onclick="redirectToWhatsApp('Basic')">Pilih Paket</a>
             </div>
             <div class="card" data-package="Standard">
                 <h3>Paket<br>Standard</h3>
                 <p>Kecepatan: 15 Mbps</p>
                 <p>Harga: Rp 130.000/Bulan</p>
+                <p>&nbsp;</p>
                 <p>Cocok untuk keluarga<br>dan gaming</p>
                 <a href="#" class="btn" onclick="redirectToWhatsApp('Standard')">Pilih Paket</a>
             </div>
@@ -542,6 +625,7 @@
                 <h3>Paket<br>Premium</h3>
                 <p>Kecepatan: 25 Mbps</p>
                 <p>Harga: Rp 150.000/Bulan</p>
+                <p>&nbsp;</p>
                 <p>Untuk streaming HD<br>dan belajar online</p>
                 <a href="#" class="btn" onclick="redirectToWhatsApp('Premium')">Pilih Paket</a>
             </div>
@@ -549,6 +633,7 @@
                 <h3>Paket<br>Platinum</h3>
                 <p>Kecepatan: 50 Mbps</p>
                 <p>Harga: Rp 250.000/Bulan</p>
+                <p>&nbsp;</p>
                 <p>Untuk kerja intensif<br>ngebut tanpa hambatan</p>
                 <a href="#" class="btn" onclick="redirectToWhatsApp('Platinum')">Pilih Paket</a>
             </div>
@@ -559,20 +644,28 @@
             <div class="contact-info">
                 <p class="label">WhatsApp</p>
                 <p class="colon">:</p>
-                <p><a href="#" onclick="redirectToContactWhatsApp()">0857-7777-3541</a></p>
+                <p><a href="#" onclick="redirectToContactWhatsApp()">0857 7777 3541</a></p>
                 <p class="label">Email</p>
                 <p class="colon">:</p>
                 <p><a href="mailto:halopusatwifisolo@gmail.com?subject=Informasi%20Pasang%20WiFi%20Solo">halopusatwifisolo@gmail.com</a></p>
             </div>
+            <a href="https://ridwanbudilaksono.github.io/pembayaran/" class="payment-btn">Pembayaran</a>
         </section>
     </div>
     <div class="whatsapp-float" onclick="redirectToContactWhatsApp()">
-        <i class="fab fa-whatsapp"></i>
+        <img src="https://github.com/ridwanbudilaksono/wifi/blob/main/whatsapp.png?raw=true" alt="WhatsApp">
     </div>
     <footer>
         <p>2025 Pusat WiFi Solo\nInternet Lancar dan Stabil</p>
     </footer>
     <script>
+        // Scroll to top on page load
+        window.onload = function() {
+            window.scrollTo(0, 0);
+            document.getElementById('welcomePopup').classList.add('show');
+            triggerHeaderAnimations();
+        };
+
         // Function to trigger header animations
         function triggerHeaderAnimations() {
             document.querySelector('.part1').classList.add('animated');
@@ -581,24 +674,16 @@
             document.querySelector('.slogan').classList.add('animated');
         }
 
-        // Show popup and trigger header animations on page load
-        window.onload = function() {
-            document.getElementById('welcomePopup').classList.add('show');
-            triggerHeaderAnimations();
-        };
-
         // Close popup, show floating button after 1.5 seconds, and replay header animations
         function closePopup() {
             document.getElementById('welcomePopup').classList.remove('show');
             setTimeout(() => {
                 document.querySelector('.whatsapp-float').classList.add('show');
-            }, 1500); // 1.5 seconds delay
-            // Reset header animations
+            }, 1500);
             document.querySelector('.part1').classList.remove('animated');
             document.querySelector('.part2').classList.remove('animated');
             document.querySelector('header p').classList.remove('animated');
             document.querySelector('.slogan').classList.remove('animated');
-            // Replay animations after a short delay
             setTimeout(triggerHeaderAnimations, 100);
         }
 
