--- a/index.html
+++ b/index.html
@@ -136,8 +136,8 @@
             font-family: 'Font Awesome 6 Free';
             font-weight: 900;
             position: absolute;
-            top: 0px;
-            right: 10px;
+            top: -5px;
+            right: -5px;
             color: #f59e0b;
             font-size: 1.5em;
             padding: 6px;
@@ -327,7 +327,7 @@
             background: linear-gradient(45deg, #25D366, #128C7E);
             border-radius: 50%;
             box-shadow: 0 6px 20px rgba(0,0,0,0.3);
-            display: none;
+            display: flex;
             justify-content: center;
             align-items: center;
             transition: transform 0.3s, box-shadow 0.3s;
@@ -339,7 +339,6 @@
             object-fit: contain;
         }
         .whatsapp-float.show {
-            display: flex;
             animation: fadeInUp 0.6s ease-out forwards;
         }
         .whatsapp-float:hover {
@@ -518,7 +517,8 @@
             .card p { font-size: 0.8em; }
             .btn { padding: 8px 15px; font-size: 0.8em; }
             .card.best::after {
-                top: 0px;
+                top: -5px;
+                right: -5px;
             }
             #contact { 
                 padding: 1em;
@@ -659,10 +659,10 @@
         <p>2025 Pusat WiFi Solo\nInternet Lancar dan Stabil</p>
     </footer>
     <script>
-        // Scroll to top on page load
+        // Scroll to top and initialize animations on page load
         window.onload = function() {
             window.scrollTo(0, 0);
-            document.getElementById('welcomePopup').classList.add('show');
+            document.querySelector('.whatsapp-float').classList.add('show');
             triggerHeaderAnimations();
         };
 
@@ -674,12 +674,10 @@
             document.querySelector('.slogan').classList.add('animated');
         }
 
-        // Close popup, show floating button after 1.5 seconds, and replay header animations
+        // Close popup and replay header animations
         function closePopup() {
             document.getElementById('welcomePopup').classList.remove('show');
-            setTimeout(() => {
-                document.querySelector('.whatsapp-float').classList.add('show');
-            }, 1500);
+            document.querySelector('.whatsapp-float').classList.add('show');
             document.querySelector('.part1').classList.remove('animated');
             document.querySelector('.part2').classList.remove('animated');
             document.querySelector('header p').classList.remove('animated');
