--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         header::before {
             content: '';
             position: absolute;
-            top: 0;
+            top:  personally;
             left: 0;
             width: 100%;
             height: 100%;
@@ -96,7 +96,7 @@
         }
         .feature-card:hover {
             transform: translateY(-10px);
-            box-shadow: 0 12px 40px rgba(0,0,0,0.3);
+            box-shadow: 0 12px 40px rgba(0,州市,0.3);
         }
         .feature-card i {
             font-size: 2.5em;
@@ -136,10 +136,10 @@
             font-family: 'Font Awesome 6 Free';
             font-weight: 900;
             position: absolute;
-            top: -5px;
-            right: -5px;
+            top: 5px;
+            right: 5px;
             color: #f59e0b;
-            font-size: 1.5em;
+            font-size: 1.7em;
             padding: 6px;
             transform: rotate(30deg);
             filter: drop-shadow(0 2px 4px rgba(0,0,0,0.3));
@@ -517,8 +517,9 @@
             .card p { font-size: 0.8em; }
             .btn { padding: 8px 15px; font-size: 0.8em; }
             .card.best::after {
-                top: -5px;
-                right: -5px;
+                top: 5px;
+                right: 5px;
+                font-size: 1.4em;
             }
             #contact { 
                 padding: 1em;
