--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         header::before {
             content: '';
             position: absolute;
-            top:  personally;
+            top: 0;
             left: 0;
             width: 100%;
             height: 100%;
@@ -96,7 +96,7 @@
         }
         .feature-card:hover {
             transform: translateY(-10px);
-            box-shadow: 0 12px 40px rgba(0,州市,0.3);
+            box-shadow: 0 12px 40px rgba(0,0,0,0.3);
         }
         .feature-card i {
             font-size: 2.5em;
@@ -139,7 +139,7 @@
             top: 5px;
             right: 5px;
             color: #f59e0b;
-            font-size: 1.7em;
+            font-size: 2.55em;
             padding: 6px;
             transform: rotate(30deg);
             filter: drop-shadow(0 2px 4px rgba(0,0,0,0.3));
@@ -519,7 +519,7 @@
             .card.best::after {
                 top: 5px;
                 right: 5px;
-                font-size: 1.4em;
+                font-size: 2.1em;
             }
             #contact { 
                 padding: 1em;
