--- a/index.html
+++ b/index.html
@@ -254,6 +254,11 @@
             justify-content: space-between;
             max-width: 600px;
             margin: 1.5em auto 0;
+            gap: 1em;
+        }
+        .contact-buttons a {
+            flex: 1;
+            text-align: center;
         }
         .popup {
             position: fixed;
