--- a/index.html
+++ b/index.html
@@ -678,8 +678,8 @@
                 <p><a href="mailto:halopusatwifisolo@gmail.com?subject=Informasi%20Pasang%20WiFi%20Solo">halopusatwifisolo@gmail.com</a></p>
             </div>
             <div class="contact-buttons">
-                <a href="https://ridwanbudilaksono.github.io/galeri/" class="gallery-btn">Galeri</a>
-                <a href="https://ridwanbudilaksono.github.io/pembayaran/" class="payment-btn">Pembayaran</a>
+                <a href="https://pusatwifisolo.github.io/galeri/" class="gallery-btn">Galeri</a>
+                <a href="https://pusatwifisolo.github.io/pembayaran/" class="payment-btn">Pembayaran</a>
             </div>
         </section>
     </div>
