--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@
             </div>
            
             <nav class="hidden md:flex space-x-10">
-                <a href="#home" class="text-gray-600 hover:text-blue-600 font-medium no-highlight">Halaman Utama</a>
+                <a href="#home" class="text-gray-600 hover:text-blue-600 font-medium no-highlight">Beranda</a>
                 <a href="https://pusatwifisolo.github.io/panduan/" class="text-gray-600 hover:text-blue-600 font-medium no-highlight">Panduan Layanan</a>
                 <a href="https://pusatwifisolo.github.io/galeri/" class="text-gray-600 hover:text-blue-600 font-medium no-highlight">Galeri</a>
                 <a href="https://pusatwifisolo.github.io/pembayaran/" class="text-gray-600 hover:text-blue-600 font-medium no-highlight">Pembayaran</a>
@@ -403,7 +403,7 @@
         </div>
        
         <div id="mobile-menu" class="hidden md:hidden bg-white py-4 px-4">
-            <a href="#home" class="block py-2 text-gray-600 hover:text-blue-600 no-highlight">Halaman Utama</a>
+            <a href="#home" class="block py-2 text-gray-600 hover:text-blue-600 no-highlight">Beranda</a>
             <a href="https://pusatwifisolo.github.io/panduan/" class="block py-2 text-gray-600 hover:text-blue-600 no-highlight">Panduan Layanan</a>
             <a href="https://pusatwifisolo.github.io/galeri/" class="block py-2 text-gray-600 hover:text-blue-600 no-highlight">Galeri</a>
             <a href="https://pusatwifisolo.github.io/pembayaran/" class="block py-2 text-gray-600 hover:text-blue-600 no-highlight">Pembayaran</a>
@@ -715,7 +715,7 @@
                 <div>
                     <h3 class="text-lg font-bold mb-6">Halaman</h3>
                     <ul class="space-y-3">
-                        <li><a href="#home" class="text-gray-400 hover:text-white no-highlight">Halaman Utama</a></li>
+                        <li><a href="#home" class="text-gray-400 hover:text-white no-highlight">Beranda</a></li>
                         <li><a href="https://pusatwifisolo.github.io/panduan/" class="text-gray-400 hover:text-white no-highlight">Panduan Layanan</a></li>
                         <li><a href="https://pusatwifisolo.github.io/galeri/" class="text-gray-400 hover:text-white no-highlight">Galeri</a></li>
                         <li><a href="https://pusatwifisolo.github.io/pembayaran/" class="text-gray-400 hover:text-white no-highlight">Pembayaran</a></li>
